fix(select): styling on mobile

--- a/packages/ord-connect/src/components/SelectWalletModal/style.css
+++ b/packages/ord-connect/src/components/SelectWalletModal/style.css
@@ -19,17 +19,6 @@
   height: 100%;
 }
 
-@media screen and (min-width: 768px) {
-  .ord-connect-wallet-modal .outer-container {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    height: auto;
-    border-radius: 20px;
-  }
-}
-
 .ord-connect-wallet-modal .inner-container {
   display: flex;
   align-items: center;
@@ -46,30 +35,11 @@
   height: 100%;
 }
 
-@media screen and (min-width: 768px) {
-  .ord-connect-wallet-modal .panel {
-    border: 1px solid rgba(51, 51, 51, 0.5);
-    border-radius: 20px;
-  }
-}
-
 .ord-connect-wallet-modal .panel-title-container {
   display: flex;
   justify-content: space-between;
   padding: 32px 24px 0px 24px;
   align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .ord-connect-wallet-modal .panel-title-container {
-    padding: 24px 32px 0px 32px;
-    border-bottom: 0px;
-  }
-
-  .ord-connect-wallet-modal .unsupported-browser-message {
-    font-size: 16px;
-    padding-left: 24px;
-  }
 }
 
 .ord-connect-wallet-modal .panel-title {
@@ -79,16 +49,6 @@
   font-weight: 700;
   line-height: 32px;
   margin: 0px;
-}
-
-@media screen and (min-width: 768px) {
-  .ord-connect-wallet-modal .panel-title {
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px;
-    letter-spacing: 0.2px;
-  }
 }
 
 .ord-connect-wallet-modal .unsupported-browser-message {
@@ -106,18 +66,6 @@
   margin: 32px 24px 0px;
 }
 
-@media screen and (min-width: 768px) {
-  .ord-connect-wallet-modal .panel-content-container {
-    margin: 48px 32px 32px 32px;
-  }
-}
-
-@media screen and (min-width: 1080px) {
-  .ord-connect-wallet-modal .panel-content-container {
-    margin: 48px 32px 32px 32px;
-  }
-}
-
 .ord-connect-wallet-modal .panel-content-inner-container {
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -129,9 +77,9 @@
   background: transparent;
   border: 0px;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
-  line-height: 24px;
+  line-height: 20px;
   width: 100%;
   cursor: pointer;
 }
@@ -163,14 +111,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 12px;
+  padding: 16px 4px;
   width: 100%;
-}
-
-@media screen and (min-width: 1080px) {
-  .ord-connect-wallet-modal .option-wrapper {
-    padding: 16px;
-  }
 }
 
 .ord-connect-wallet-modal .wallet-option-button {
@@ -193,15 +135,6 @@
   border-radius: 20px 20px 0px 0px;
 }
 
-@media screen and (min-width: 1080px) {
-  .ord-connect-wallet-modal .wallet-option-button:first-child {
-    padding: 16px 16px 8px 16px;
-    border: 0px;
-    margin-bottom: 0px;
-    border-radius: 20px 20px 0px 0px;
-  }
-}
-
 .ord-connect-wallet-modal .wallet-option-button:last-child {
   padding: 8px 16px 16px 16px;
   border: 0px;
@@ -218,26 +151,21 @@
 
 .ord-connect-wallet-modal .wallet-icon {
   width: 32px;
-}
-
-@media (min-width: 768px) {
-  .ord-connect-wallet-modal .wallet-icon {
-    width: 40px;
-  }
+  height: 32px;
 }
 
 .ord-connect-wallet-modal .wallet-option {
   flex-grow: 1;
-  margin-left: 16px;
+  margin-left: 12px;
   text-align: left;
 }
 
 .ord-connect-wallet-modal .wallet-option-connected-address {
   display: flex;
-  padding: 4px 12px 4px 8px;
+  padding: 4px 8px;
   align-items: center;
-  margin-left: 16px;
-  margin-right: 16px;
+  margin-left: 4px;
+  margin-right: 8px;
   text-align: left;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
@@ -246,22 +174,16 @@
 
 .ord-connect-wallet-modal .wallet-option-connected-address .label {
   margin-left: 4px;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .ord-connect-wallet-modal .wallet-option-label {
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
-}
-
-@media screen and (min-width: 1079px) {
-  .ord-connect-wallet-modal .wallet-option-label {
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 24px;
-  }
+  margin: 0;
 }
 
 .ord-connect-wallet-modal .wallet-option-subtitle {
@@ -269,6 +191,7 @@
   font-weight: 400;
   line-height: 16px;
   color: #8c8c8c;
+  margin: 0;
 }
 
 .ord-connect-wallet-modal .horizontal-separator {
@@ -285,12 +208,98 @@
 }
 
 .ord-connect-wallet-modal .preferred-label {
-  padding: 4px 12px 4px 12px;
+  padding: 4px 12px;
   color: #000000b2;
   background-color: #ffbf18;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 16px;
   font-weight: 400;
-  border-radius: 100px;
-  margin-right: 10px;
+  border-radius: 20px;
+  margin-left: 4px;
+  margin-right: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .ord-connect-wallet-modal .outer-container {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: auto;
+    border-radius: 20px;
+  }
+
+  .ord-connect-wallet-modal .panel {
+    border: 1px solid rgba(51, 51, 51, 0.5);
+    border-radius: 20px;
+  }
+
+  .ord-connect-wallet-modal .panel-title-container {
+    padding: 24px 32px 0px 32px;
+    border-bottom: 0px;
+  }
+
+  .ord-connect-wallet-modal .unsupported-browser-message {
+    font-size: 16px;
+    padding-left: 24px;
+  }
+
+  .ord-connect-wallet-modal .panel-title {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0.2px;
+  }
+
+  .ord-connect-wallet-modal .panel-content-container {
+    margin: 48px 32px 32px 32px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option {
+    margin-left: 16px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .ord-connect-wallet-modal .panel-content-container {
+    margin: 48px 32px 32px 32px;
+  }
+
+  .ord-connect-wallet-modal .option-wrapper {
+    padding: 16px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option-button {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option-button:first-child {
+    padding: 16px 16px 8px 16px;
+    border: 0px;
+    margin-bottom: 0px;
+    border-radius: 20px 20px 0px 0px;
+  }
+
+  .ord-connect-wallet-modal .wallet-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option-label {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option-connected-address {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .ord-connect-wallet-modal .wallet-option-connected-address .label {
+    font-size: 16px;
+  }
 }
